[package]
name = "bad_crypto"
version = "0.0.1"
authors = ["Jesko Dujmovic <jeskod+git@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
num-traits = "0.2.6"
ndarray = { version = "0.13.1" }
num-integer = "0.1.43"
ndarray-rand = "0.11.0"
num-bigint = { version = "0.3", features = ["rand"]}
